Closed Bug 1672558 Opened 4 years ago Closed 4 years ago

Crash in [@ gfxPlatform::Init | mozilla::FFmpegRuntimeLinker::Init]

Categories

(Core :: Audio/Video: Playback, defect)

defect

Tracking

()

RESOLVED FIXED
84 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox81 --- unaffected
firefox82 --- unaffected
firefox83 --- unaffected
firefox84 + fixed

People

(Reporter: aryx, Assigned: jya)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/55682f19-a386-469a-84f6-776b30201021

MOZ_CRASH Reason: MOZ_RELEASE_ASSERT(!XRE_IsGPUProcess()) (GFX: Not allowed in GPU process.)

Top 10 frames of crashing thread:

0 libxul.so gfxPlatform::Init gfx/thebes/gfxPlatform.cpp:815
1 libxul.so gfxPlatform::GetPlatform gfx/thebes/gfxPlatform.cpp:510
2 libxul.so mozilla::FFmpegRuntimeLinker::Init dom/media/platforms/ffmpeg/FFmpegRuntimeLinker.cpp:60
3 libxul.so mozilla::PDMFactory::EnsureInit const dom/media/platforms/PDMFactory.cpp:185
4 libxul.so mozilla::detail::RunnableFunction<mozilla::PDMFactory::EnsureInit xpcom/threads/nsThreadUtils.h:577
5 libxul.so mozilla::SyncRunnable::Run xpcom/threads/SyncRunnable.h:114
6 libxul.so mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal xpcom/threads/TaskController.cpp:515
7 libxul.so mozilla::detail::RunnableFunction<mozilla::TaskController::InitializeInternal xpcom/threads/nsThreadUtils.h:577
8 libxul.so nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1197
9 libxul.so mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:109
Flags: needinfo?(jyavenard)

People are trying to set a pref media.rdd-ffmpeg.enabled to true which is set to false for a reason.

The code is guarded by

    if (!XRE_IsRDDProcess() || StaticPrefs::media_rdd_ffmpeg_enabled()) {
      FFmpegRuntimeLinker::Init();
    }

That pref was just added, and disabled by default for good reasons.

Status: NEW → RESOLVED
Closed: 4 years ago
Flags: needinfo?(jyavenard)
Resolution: --- → INVALID

Going to re-open that one and put a quick check to prevent the crash at least.

Status: RESOLVED → REOPENED
Resolution: INVALID → ---
Assignee: nobody → jyavenard
Pushed by jyavenard@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d6150c743d10 Only initialize usable PDMs for their respective process. r=mattwoodrow
Status: REOPENED → RESOLVED
Closed: 4 years ago4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch

There are two installations reporting the issue with the latest Nightly and the same crash stack:

Please check if this bug shall get reopened.

Flags: needinfo?(jyavenard)

Those are people who forcefully modified a pref to make ffmpeg run in the RDD process.

It will crash the RDD process, but won't have an impact on the browser.

I believe :stransky has a work in progress to no longer use gfxPlatform::Init() in the RDD process

Flags: needinfo?(jyavenard) → needinfo?(stransky)

Yes, it's on my TODO list, I'm going to look at it this week.

Flags: needinfo?(stransky)

Yeah, it's still on my radar. I had to fix an urgent downstream issue recently (https://bugzilla.redhat.com/show_bug.cgi?id=1893474) but I'll look at this one too.

Flags: needinfo?(stransky)
See Also: → 1676238
See Also: 1676238
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: