Bug 1672558 - Only initialize usable PDMs for their respective process. r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D94408